TimeBox Change Log
------------------

TimeBox 0.10.6: currently unreleased
- Introduces functions to get information on data sets without need to load the
  full data: TS.LOADMETA and TS.SAVEMETA handle meta-information within data
  sets, and TS.GETDIM retrieves number of instances and time series length.
- Introduces TS.GETPATH to return the path where a data set file is supposed to
  be stored.
- Add TB.SHARPSHOOT to produce SharpShoot plots.


TimeBox 0.9.5: released 2015-Nov-30
- Introduces functions for distance matrix-based ensembles. The functions in
  RUNS.DME implemente the strategies reported in the following paper:
  Giusti, R; Silva, D.F.; and Batista, E.A.P.A. "Time Series Classification
  with Representation Ensembles". Published on 14th International Symposium on
  Intelligent Data Analysis (IDA'2015).
- Adds auxiliary functions to load batches of files and to write data as CSV
  files.


TimeBox 0.8.4: released 2015-Sep-14
- Deprecates the RELEASEDATE field in the version structure. This feature may be
  removed in the future;
- Removes internal documentation from TB.VERSION about unimplemented features:
  the function was supposed to check the presence or absence of flags when
  supplied a second argument.


TimeBox 0.8.3: released 2015-Sep-09
- Introduced functions to cache time series representation: TRANSFORM.CACHE and
  TRANSFORM.ISCACHED.


TimeBox 0.7.2: released 2015-May-19
- No changelog recorded.


TimeBox 0.6.1: released 2015-Apr-27
- Released on GitHub;
- No changelog recorded.