@@ -23,6 +23,8 @@ function scat(vdata, hdata, varargin)
 %                       contain two elements of type CHAR: the first is
 %                       the label for the vertical method, and the
 %                       second is the label for the horizontal method
+%       -nofigure       does not create a new figure object; overrides
+%                       -invisible
 %       -nooverwrite    only valid if -writepdf is also supplied; does
 %                       not overwrite the write path
 %       -noshadow       does not include a shadowed area under the upper
@@ -39,6 +41,7 @@ hlabel = [];
 invisible = 0;
 savepath = [];
 nooverwrite = 0;
+nofigure = 0;
 makeshadow = 1;
 
 % If the first two variadic arguments exist and do not start with '-',
@@ -68,6 +71,9 @@ while next <= numel(varargin)
             next = next + 2;
         case '-invisible'
             invisible = 1;
+            next = next + 1;
+        case '-nofigure'
+            nofigure = 1;
             next = next + 1;
         case '-nooverwrite'
             nooverwrite = 1;
@@ -114,7 +120,9 @@ else
 end
 
 % Create a new figure
-f = figure('Visible', visibility);
+if ~nofigure
+    f = figure('Visible', visibility);
+end
 
 % Plot the scatter and add a shadow in the left upper side
 scatter(pointsx, pointsy, 'k', 'filled');
